--- a/style/styles.css
+++ b/style/styles.css
@@ -1,12 +1,11 @@
-/* Tailwind CSS */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* Custom CSS */
 * {
   outline: 0 !important;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .myNav {
@@ -14,6 +13,9 @@
   text-align: center;
   height: 67px;
   line-height: 50px;
+  position: sticky;
+  top: 0;
+  z-index: 1020;
 }
 
 .myNav ul {
