--- a/style/styles.css
+++ b/style/styles.css
@@ -2,10 +2,33 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
+*,
+*::after,
+*::before {
   outline: 0 !important;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  -webkit-user-select: none;
+  -webkit-user-drag: none;
+}
+
+body::-webkit-scrollbar {
+  width: 16px;
+}
+
+.dark body::-webkit-scrollbar {
+  background-color: rgb(0, 0, 110);
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  border: 4px solid transparent;
+  background-clip: content-box;
+  background-color: gray;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(161, 161, 161);
 }
 
 .myNav {
@@ -26,10 +49,8 @@
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #495057;
-  background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid #ced4da;
+  border: 0px;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   box-sizing: border-box;
